--- a/workspace/InvoiceDemo/properties/xava.properties
+++ b/workspace/InvoiceDemo/properties/xava.properties
@@ -16,7 +16,7 @@ mapFacadeAutoCommit=false
 
 # Visual style
 #styleCSS=terra.css
-#styleCSS=light.css
+styleCSS=light.css
 
 # To do small modification over the current style just add your css rules to custom.css in web/xava/style 
 # To create a completely new style: 
